# ai-experiments

agentic_content_creation/: README.md  pyproject.toml  report.md
agentic_content_creation/db/: chroma.sqlite3
agentic_content_creation/knowledge/: user_preference.txt
agentic_content_creation/src/agentic_content_creation/: .env.example  crew.py  env_helper.py  main.py
agentic_content_creation/src/agentic_content_creation/config/: agents.yaml  tasks.yaml
customer-service-bot/: Fine_tuning_Llama_3_2_for_customer_service_chat.ipynb
sentiment-analysis/: Fine_tuning_Llama_3_1_for_sentiment_analysis_Part_1.ipynb  Fine_tuning_Llama_3_1_for_sentiment_analysis_Part_2.ipynb
vertex-ai-deployment-demo/: vertex_ai_llm_demo_working.ipynb
