[project]
name = "agentic_content_creation"
version = "0.1.0"
description = "agentic-content-creation using crewAI"
authors = [{ name = "Chris Lehman", email = "chrisalehman@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
agentic_content_creation = "agentic_content_creation.main:run"
run_crew = "agentic_content_creation.main:run"
train = "agentic_content_creation.main:train"
replay = "agentic_content_creation.main:replay"
test = "agentic_content_creation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
